# lunacept

./: Makefile  README.md  benchmark.py  pyproject.toml
.github/workflows/: tests.yml
example/: example_usage.py
src/lunacept/: __init__.py  __main__.py  _output.py  config.py  exception_hook.py  instrumentor.py  output.py  parse.py  utils.py
src/lunacept/autoinstall/: __init__.py
tests/: test_exception_hook.py  test_expr_tracer.py  test_instructmentor.py  test_run_instrument.py
tests/data/: multi_line_error.py  single_line_error.py
